# CorrelationCorrection

./: Exposure_sim.ipynb  GL_example.ipynb  GL_simulation.ipynb  Ham_ex.ipynb  HamlingApproach.ipynb  Hamling_example.ipynb  IHME_data_ex.ipynb  Itoga_regression.ipynb  Itoga_regression_trim.ipynb  Itoga_simulation.ipynb  JAX_simulator.ipynb  SBPvPAD_data.xlsx  SvsI_data_IHME.ipynb  between_study_het.ipynb  big_between_study.ipynb  big_between_study_reml.ipynb  direct_marginal_likelihood.ipynb  inverseGLM.ipynb  pyproject.toml  requirements.txt  setup_false.py  sim_results_corr.csv  sim_results_diag.csv  sim_results_jack_corr.csv  sim_results_jack_diag.csv  simulation.ipynb  ~$SBPvPAD_data.xlsx
Examples/: GL_functional_ex.ipynb  functional_example.ipynb  gl_functional_example.ipynb  sbp_pad.ipynb  smoking_asthma.ipynb  smoking_ex.ipynb  smoking_rare.ipynb
correlationCorrection.egg-info/: PKG-INFO  SOURCES.txt
correlation_correction/: CorrFuncs.py  GLMethods.py  HamMethods.py  IterativeFitting.py  _version.py
correlation_correction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CorrFuncs.py  GL_example.ipynb  HamMethods.py  IterativeFitting.py
src/correlation_correction/: gl_methods.py  regressions.py
src/correlation_correction/methods/: data_counts.py  gl_methods.py  hamling_methods.py
tests/: covariance_test.py  gl_test.py  hamling_test.py
