[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "correlation_correction"
dynamic = ["version"]
dependencies = [
  "cvxpy==1.5.1",
  "numpy==1.26.4",
  "scipy==1.13.0",
]

[project.urls]
homepage = "https://github.com/ihmeuw-msca/CorrelationCorrection"

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"